# brp-amsterdam-api

./: .pre-commit-config.yaml  DockerfilePersonenMock  README.md  docker-compose.yml
src/: Dockerfile  get-openapi.py  manage.py  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  setup.cfg
src/brp_amsterdam_api/: settings.py  urls.py  views.py  wsgi.py
src/brp_amsterdam_api/bevragingen/: client.py  encryption.py  loghandler.py  permissions.py  types.py  urls.py
src/brp_amsterdam_api/bevragingen/views/: base.py  bewoningen.py  index.py  personen.py  verblijfplaatshistorie.py
src/config/dataset_fields/personen/: benk-brp-gegevensset-1.txt  benk-brp-gegevensset-10.txt  benk-brp-gegevensset-11.txt  benk-brp-gegevensset-12.txt  benk-brp-gegevensset-13.txt  benk-brp-gegevensset-14.txt  benk-brp-gegevensset-15.txt  benk-brp-gegevensset-16.txt  benk-brp-gegevensset-17.txt  benk-brp-gegevensset-18.txt  (+17 more)
src/haal_centraal_mock/: Dockerfile
src/haal_centraal_proxy/: settings.py  urls.py  views.py
src/haal_centraal_proxy/api/: authentication.py  client.py  exceptions.py  permissions.py  types.py  urls.py  views.py
src/haal_centraal_proxy/bevragingen/: authentication.py  client.py  encryption.py  exceptions.py  fields.py  permissions.py  types.py  urls.py
src/tests/: settings.py
src/tests/test_api/: test_auditlog.py  test_fields.py  test_permissions.py  test_views.py  test_views_base.py  test_views_bewoningen.py  test_views_health.py  test_views_personen.py  test_views_verblijfplaatshistorie.py  test_views_verblijfsplaatshistorie.py
(+35 files in other folders)
