[metadata]
name = brp-amsterdam-api
version = 1.0
description = Authorization checks for accessing RvIG BRP API
long_description = Authorization checks for accessing RvIG BRP API
url = https://api.brp.amsterdam.nl/
author = Amsterdam Datapunt
author_email = datapunt@amsterdam.nl
license = Mozilla Public License Version 2.0
classifiers =
    Environment :: Web Environment
Framework :: Django
    Framework :: Django :: X.Y  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.13
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
[options]
include_package_data = true
packages =
    brp_amsterdam_api
